--- a/cards.css
+++ b/cards.css
@@ -445,6 +445,7 @@ body {
     height: 100%;
     background-color: var(--primary);
     width: 0%;
+    transition: width 0.3s ease;
 }
 
 .feedback {
